--- a/view/frontend/templates/html/cart/cart-drawer.phtml
+++ b/view/frontend/templates/html/cart/cart-drawer.phtml
@@ -150,7 +150,7 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
                             <div class="flex items-start p-3 -m-3 space-x-4 transition duration-150
                                 ease-in-out rounded-lg hover:bg-gray-100">
                                 <a :href="item.product_url" class="w-1/4">
-                                    <img :src="item.product_image.src" :width="item.product_image.width" :height="item.product_image.height" loading="lazy" />
+                                    <img :src="item.product_image.src" :width="item.product_image.width" :height="item.product_image.height" loading="lazy" alt="product image"/>
                                 </a>
                                 <div class="w-3/4 space-y-2">
                                     <div>
